# cloco-ams

./: README.md  ams_db_public_artist.csv  artist_import.csv  pyproject.toml
ams/: .env  db.sqlite3  manage.py
ams/artist/: admin.py  models.py
ams/artist/migrations/: 0001_initial.py  0002_alter_artist_gender.py
ams/artist/models/: __init__.py
ams/artist/serializers/: __init__.py  create.py  csv_export.py  csv_import.py  delete.py  list.py  update.py
ams/artist/views/: __init__.py  create.py  csv_export.py  csv_import.py  delete.py  list.py  update.py
ams/authentication/serializers/: __init__.py  login.py
ams/authentication/views/: __init__.py  login.py
ams/choice/: gender.py  genre.py  role.py
ams/core/: asgi.py  constant.py  settings.py  urls.py  wsgi.py
ams/dashboard/: artist.py  dashboard.py  music.py  user.py
ams/music/: admin.py  exception.py  views.py
ams/music/migrations/: 0001_initial.py  0002_alter_music_genre.py
ams/music/models/: __init__.py  models.py
ams/music/serializers/: __init__.py  create.py  delete.py  list.py  update.py
ams/music/views/: __init__.py  create.py  delete.py  list.py  update.py
ams/settings/: __init__.py  _auth.py  _installed_apps.py  _middleware.py  _password_validators.py  _templates.py  base.py
ams/urls/artist/: urls.py
ams/urls/authentication/: urls.py
ams/urls/dashboard/: urls.py
ams/urls/music/: urls.py
ams/urls/user/: urls.py
ams/user/: models.py
ams/user/migrations/: 0001_initial.py
ams/user/models/: __init__.py
ams/user/serializers/: __init__.py  (+5 more)
docker/: docker-compose.yml
(+12 files in other folders)
